--- a/docker-compose.refinitiv.yml
+++ b/docker-compose.refinitiv.yml
@@ -3,12 +3,12 @@ version: '3'
 services:
 
   tdm_ui_refinitiv:
-    image: "${REPO_DOCKER_URL}/tdm-ui-refinitiv:${TDM_UI_REFINITIV_VERSION}"
+    image: "ridler17/tdm-ui-refinitiv:latest"
     tty: true
     environment:
-      - TDM_APPLICATION_KEY=${TDM_APPLICATION_KEY}
+      - TDM_APPLICATION_KEY=${TDM_APPLICATION_KEY:-594df9ea-3565-4145-b9c4-9bbc47ff6200}
     ports:
-      - "${TDM_UI_REFINITIV_PORT}:32082"
+      - "${TDM_UI_REFINITIV_PORT:-32082}:32082"
     networks:
       - tdm
     restart: unless-stopped
@@ -17,6 +17,9 @@ services:
     depends_on:
       - "tdm_api"
     hostname: tdm_ui_refinitiv
+    logging:
+      options:
+        max-size: 200m
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://tdm_ui_refinitiv:32082/#login || exit 1"]
       interval: 30s
