--- a/.github/workflows/snyk-infrastructure-analysis.yml
+++ b/.github/workflows/snyk-infrastructure-analysis.yml
@@ -25,18 +25,19 @@ jobs:
         # Snyk can be used to break the build when it detects security issues.
         # In this case we want to upload the issues to GitHub Code Scanning
         continue-on-error: true
-        uses: snyk/actions/iac@master
-        env:
+        # The steps commented out as we have no supported types of IaC
+        # uses: snyk/actions/iac@master
+        # env:
           # In order to use the Snyk Action you will need to have a Snyk API token.
           # More details in https://github.com/snyk/actions#getting-your-snyk-token
           # or you can signup for free at https://snyk.io/login
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
+          # SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        # with:
           # Add the path to the configuration file that you would like to test.
           # For example `deployment.yaml` for a Kubernetes deployment manifest
           # or `main.tf` for a Terraform configuration file
-          file: docker-compose.yml docker-compose.refinitiv.yml
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: snyk.sarif
+          # file: docker-compose.yml docker-compose.refinitiv.yml
+      # - name: Upload result to GitHub Code Scanning
+        # uses: github/codeql-action/upload-sarif@v1
+        # with:
+          # sarif_file: snyk.sarif
