Fix version of RabbitMQ to 3.8.19

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - postgres:/var/lib/postgresql/data
 
   rabbitmq:
-    image: rabbitmq
+    image: rabbitmq:3.8.19
     hostname: rabbitmq
     networks:
       - tdm
