--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,8 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
+    volumes:
+      - ml-csv:/tdm_api/csv
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -198,6 +200,7 @@ volumes:
   postgres:
   spark-events:
   spark-logs:
+  ml-csv:
 
 networks:
   tdm:
