--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
       options:
         max-size: 200m
     healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://tdm_api:3333/v1/versions || exit 1" ]
+      test: [ "CMD-SHELL", "curl -f http://tdm-nginx:3333/v1/versions || exit 1" ]
       interval: 30s
       timeout: 5s
       retries: 5
