--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,7 +112,7 @@ services:
       retries: 5
     restart: unless-stopped
     volumes:
-      - ml-csv:/tdm_api/csv
+      - csv_vol:/tdm_api/csv
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -214,7 +214,7 @@ volumes:
   postgres:
   spark-events:
   spark-logs:
-  ml-csv:
+  csv_vol:
 
 networks:
   tdm:
