--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - postgres:/var/lib/postgresql/data
 
   rabbitmq:
-    image: rabbitmq:3.8.19
+    image: rabbitmq
     hostname: rabbitmq
     networks:
       - tdm
