--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -187,7 +187,7 @@ services:
       retries: 5
 
   tdm-nginx:
-    image: tdm-nginx:latest
+    image: "ridler17/tdm-nginx:latest"
     tty: true
     environment:
       - TDM_APPLICATION_KEY=${TDM_APPLICATION_KEY:-594df9ea-3565-4145-b9c4-9bbc47ff6200}
