--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,8 +64,7 @@ services:
     tty: true
     environment:
       BASE_URL: /openapi
-#      URL: http://${TDM_HOSTNAME}:${TDM_PORT:-32080}/v1/docs/openapi.json
-      URL: http://${TDM_HOSTNAME}/v1/docs/openapi.json
+      URL: http://${TDM_HOSTNAME}:${TDM_PORT:-80}/v1/docs/openapi.json
     hostname: swagger_ui
     networks:
       - tdm
@@ -97,8 +96,7 @@ services:
       - TDM_SPARK_SSH_HOST=spark
       - TDM_SPARK_SSH_PORT=22
       - TDM_LOG_LEVEL=${TDM_LOG_LEVEL:-DEBUG}
-#      - TDM_URL=http://${TDM_HOSTNAME}:${TDM_PORT:-32080}/v1/
-      - TDM_URL=http://${TDM_HOSTNAME}/v1/
+      - TDM_URL=http://${TDM_HOSTNAME}:${TDM_PORT:-80}/v1/
       - TDM_PORT=${TDM_PORT:-80}
       - TDM_HOSTNAME=${TDM_HOSTNAME}
     networks:
