--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,7 @@ services:
       retries: 5
     restart: unless-stopped
     volumes:
+      - logs:/tdm_api/logs
       - csv_vol:/tdm_api/csv
       - jars:/tdm_api/lib
       - jsons:/var/configurations/
@@ -175,6 +176,7 @@ services:
     volumes:
       - jsons:/var/configurations/
       - jars:/tdm_ssh/jars
+      - logs:/tdm_ssh/logs
 
   tdm-nginx:
     image: "ridler17/tdm-nginx:latest"
@@ -206,6 +208,7 @@ volumes:
   csv_vol:
   jsons:
   jars:
+  logs:
 
 networks:
   tdm:
