--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
       - TDM_SPARK_SSH_HOST=spark
       - TDM_SPARK_SSH_PORT=22
       - TDM_LOG_LEVEL=${TDM_LOG_LEVEL:-DEBUG}
-      - TDM_URL=http://${TDM_HOSTNAME}:${TDM_PORT:-80}/v1/
+      - TDM_URL=http://${TDM_HOSTNAME}:${TDM_PORT:-80}
       - TDM_PORT=${TDM_PORT:-80}
       - TDM_HOSTNAME=${TDM_HOSTNAME}
     networks:
